NEWS for Libp11 -- History of user visible changes

New in 0.4.19; unreleased

New in 0.4.18; 2026-02-16; Michał Trojnara
* Support for RSA-PSS and RSA-OAEP using keys retrieved using the
  PKCS11_get_private_key() libp11 API function and the PKCS#11 provider
  (Małgorzata Olszówka, Michał Trojnara)
* Improved test coverage (Małgorzata Olszówka)

New in 0.4.17; 2026-02-01; Michał Trojnara
* Ed25519 and Ed448 support (PKCS#11 v3.2) (Małgorzata Olszówka)
* Fixed OPENSSL_NO_EC builds (Małgorzata Olszówka)
* Reverted RSA public exponent change from PR #474 (Michał Trojnara)
* Fixed crash on module initialization failures (Alex Shalimov)
* Ignoring trailing newlines in pin-source files (Tobias Deiminger)
* Initial build fixes for the upcoming OpenSSL 4.x (Małgorzata Olszówka)

New in 0.4.16; 2025-06-23; Michał Trojnara
* Fixed PKCS#11 module synchronization setup that was broken
  in libp11 0.4.14 (nojocodex)

New in 0.4.15; 2025-06-09; Michał Trojnara
* Fixed incorrectly installing an internal header file (Alex Dupre)
* Fixed handling URI schemes of other providers (Małgorzata Olszówka)

New in 0.4.14; 2025-05-13; Michał Trojnara
* Added the "pkcs11prov" provider for OpenSSL 3.x (Małgorzata Olszówka)
* Added generic keypair generation interface and engine ctrl command
  (Rafael Junio da Cruz)
* Added static engine support (Lucas Mülling)
* Added PKCS11_FORCE_CLEANUP env variable to force cleanup on exit and
  stop memory leaks with certain PKCS#11 modules (Małgorzata Olszówka)
* Fixed a number of resource leaks (Małgorzata Olszówka, Hazem Zaghloul,
  Michał Trojnara)
* Fixed C_OpenSession error handling (Rafael Junio da Cruz)
* Fixed handling of uninitialized tokens (Michał Trojnara)
* Removed support for OpenSSL older than 1.0.2 (Michał Trojnara)

New in 0.4.13; 2024-12-13; Michał Trojnara
* Increased maximum PIN length (Michał Trojnara)
* Fixed several memory leaks (Michał Trojnara, Małgorzata Olszówka)