@@ -9,7 +9,7 @@ EXTRA_DIST = Makefile.mak libp11.rc.in pkcs11.rc.in
 
 # Headers
 noinst_HEADERS= libp11-int.h pkcs11.h p11_pthread.h util.h
-include_HEADERS= libp11.h p11_err.h
+include_HEADERS= libp11.h p11_ver.h p11_err.h
 
 # Libraries to build (static-engine optional)
 if ENABLE_STATIC_ENGINE
