@@ -25,6 +25,7 @@
 #ifndef _LIB11_H
 #define _LIB11_H
 
+#include "p11_ver.h"
 #include "p11_err.h"
 #include <openssl/bio.h>
 #include <openssl/err.h>
